# travel_assistant_using_rag

./: .dev.env  .gitignore  pyproject.toml
customer_support_chat/app/: main.py
customer_support_chat/app/core/: settings.py
customer_support_chat/app/services/assistants/: assistant_base.py  car_rental_assistant.py  flight_booking_assistant.py  hotel_booking_assistant.py  primary_assistant.py
customer_support_chat/app/services/tools/: cars.py  flights.py  hotels.py  lookup.py
vectorizer/app/core/: settings.py
vectorizer/app/embeddings/: embedding_generator.py
vectorizer/app/vectordb/: vectordb.py
